@@ -1,3 +1,8 @@
+2018-10-19  Danilo Chang
+
+    * Add more examples
+    * Add STYLE variable(s)
+
 2018-10-18  Danilo Chang
 
     * Bump version to v0.1
